fixed E_STRICT warning in treeWalker() Module Groups: reverted $style from 'mod' to 'raw' (null) for header-above, header-above, nav-below.
If extra whitespace around modules is needed add a Module Class Suffix ("mod")
or use contextual selectors with .above/.below, and .above-inner/.below-inner
CSS: template.css

compensate default collapsing of floating modules in .below/.above, .above-inner/.below-inner
with "display:inline-block"
Housekeeping. comment cleanup.
CSS Core: list item vertical alignment

- empty selectors in template.css
^ processing order in getCssAlias()
+ added 'rgt' to actionsmenu, fixed duplicate quotes in mod_column_group_alpha.php
# modules.php fixed typo in 'raw' style missing hte module title
+ pagination.php 'id="prev-page", id="next-page", and rel="prefetch" to nav items
+ mod_banners/better.php prep to use $title (WIP)
+ improved betterToc() rendering in helper.php
- simple next/prev page article navigation
+ use JPagination instead for article navigation (with a TOC)
^ article/default.php to use new pagination output

Lang files, fixed to work with PHP 5.2 (again) which could break the site :(
using """" instead of the ugly "_QQ_" for double quotes

--- a/css/core/base.css
+++ b/css/core/base.css
@@ -1,7 +1,7 @@
 /* äöü - UTF-8 required! */
 /*!
  * base.css "HTML5ish edition" featuring 'normalise.css'
- * @version 1.6.7 06.03.2012
+ * @version 1.6.8 19.03.2012
  * personal likings + defaults for THIS WEBSITE ONLY mixed with inspirational input from
  * @credits E. Meyer, Yahoo!, N. Sullivan, D. Edwards, CSS-WG, W3C, and the Interwebs,
  * feat. normalize.css - http://github.com/necolas/normalize.css
@@ -92,7 +92,7 @@ q{quotes: '„' '“' '‚' '‘' }
 ul,ol,dl{margin:1ex auto .625em 1ex;padding:0 0 0 1ex}
 ol{list-style:decimal}
 ul{list-style:disc}
-li{display:list-item;list-style-position:outside;text-indent:0;margin-left:1.2ex}
+li{display:list-item;list-style-position:outside;text-indent:0;margin-left:1.2ex;vertical-align:top}
 dd{margin-left:1.2ex;-moz-margin-start:0;-webkit-margin-start:0;-ms-margin-start:0}
 ol li{margin-left:1.7ex}
 dd ol,dd ul{padding-left:1ex}
