--- a/css/core/template.css
+++ b/css/core/template.css
@@ -1,6 +1,6 @@
 /*!
  * screen.css
- * @version 1.9.10 15.03.2012
+ * @version 1.9.11 19.03.2012
  * @license WTFPL
  */
 
@@ -48,12 +48,14 @@ p.counter b, .pagination span.mi {padding:.2ex .4em}
 
 .pagenav li {display:inline;margin:3px;padding:0}
 
-.actionsmenu {}
-.actionsmenu li.mi {}
-.actionsmenu span.mi {}
+li.mi .mi {vertical-align:inherit}
 
 .footer .menu, .footer .menu li {display:inline-block;list-style:none;margin:0;padding:0}
 .footer .menu li a, .footer .menu a:visited {font-weight:normal;padding:1px 3px;text-decoration:none}
+
+/* =modules and groups */
+.line.below, .line.above	,
+.above-inner, .below-inner	{display:inline-block}
 
 /* =supplementals */
 .date-container {float:right}
